--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "mocha --compilers js:babel-core/register 'test/**/*.@(js)'",
     "test:watch": "npm run test -- --watch",
     "compile": "babel -d dist/ src/",
-    "start:dev": "webpack-dev-server --inline --content-base examples/compiled --history-api-fallback",
+    "start": "webpack-dev-server --inline --content-base compiled-examples --history-api-fallback",
     "build:dev": "webpack"
   },
   "keywords": [
@@ -32,15 +32,16 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "react-dom": "^0.14.7",
+    "expect": "^1.14.0",
+    "lodash": "^4.6.1",
+    "mocha": "^2.4.5",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1",
-    "expect": "^1.14.0",
-    "mocha": "^2.4.5"
+    "webpack-dev-server": "^1.14.1"
   },
   "peerDependencies": {
     "react": "^0.14.7",
+    "react-dom": "^0.14.7",
     "immutable": "^3.7.6",
     "react-addons-pure-render-mixin": "^0.14.7"
   },
