--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
     "mocha": "^2.4.5",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "react-dom": "^0.14.7"
   },
   "peerDependencies": {
     "react": "^0.14.7",
-    "react-dom": "^0.14.7",
     "immutable": "^3.7.6",
     "react-addons-pure-render-mixin": "^0.14.7"
   },
