--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "expect": "^1.14.0",
     "lodash": "^4.6.1",
     "mocha": "^2.4.5",
+    "react-dom": "^0.14.7",
     "react-hot-loader": "^1.3.0",
+    "react-redux": "^4.4.1",
+    "redux": "^3.3.1",
     "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1",
-    "react-dom": "^0.14.7"
+    "webpack-dev-server": "^1.14.1"
   },
   "peerDependencies": {
     "react": "^0.14.7",
