--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
     "url": "git://github.com/rhythnic/react-form-wrapper.git"
   },
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register 'test/**/*.@(js)'",
-    "test:watch": "npm run test -- --watch",
+    "test": "babel-tape-runner src/**/*.test.js",
     "compile": "babel -d dist/ src/",
-    "start": "webpack-dev-server --inline --content-base compiled-examples --history-api-fallback",
-    "build:dev": "webpack"
+    "start": "webpack && webpack-dev-server --inline --content-base compiled-examples --history-api-fallback",
+    "build": "webpack"
   },
   "keywords": [
     "React",
@@ -30,15 +29,20 @@
   "devDependencies": {
     "babel-core": "^6.7.0",
     "babel-loader": "^6.2.4",
+    "babel-plugin-rewire": "^0.1.22",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-tape-runner": "^2.0.1",
     "expect": "^1.14.0",
+    "faucet": "0.0.1",
     "lodash": "^4.6.1",
-    "mocha": "^2.4.5",
+    "react-addons-test-utils": "^0.14.8",
     "react-dom": "^0.14.7",
     "react-hot-loader": "^1.3.0",
     "react-redux": "^4.4.1",
     "redux": "^3.3.1",
+    "sinon": "^1.17.3",
+    "tape": "^4.5.1",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   },
