--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "license": "MIT",
   "dependencies": {
     "immutable": "^3.7.6",
-    "react-addons-pure-render-mixin": "^0.14.7"
+    "react-addons-pure-render-mixin": "^15.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.7.0",
@@ -37,11 +37,14 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-tape-runner": "^2.0.1",
+    "enzyme": "^2.2.0",
     "faucet": "0.0.1",
     "jsdom": "^8.3.0",
+    "jsdom-global": "^1.7.0",
     "lodash": "^4.6.1",
-    "react-addons-test-utils": "^0.14.8",
-    "react-dom": "^0.14.7",
+    "react": "^15.0.1",
+    "react-addons-test-utils": "^15.0.1",
+    "react-dom": "^15.0.1",
     "react-hot-loader": "^1.3.0",
     "react-redux": "^4.4.1",
     "redux": "^3.3.1",
@@ -51,6 +54,6 @@
     "webpack-dev-server": "^1.14.1"
   },
   "peerDependencies": {
-    "react": "^0.14.7"
+    "react": "^15.0.1"
   }
 }
