--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,8 @@
-# Logs
-logs
+.DS_Store
 *.log
-npm-debug.log*
-
-# Dependency directory
-node_modules
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-.DS_STORE
 *.idea
+node_modules
+examples/.build
+dist
+lib
+es
