--- a/package.json
+++ b/package.json
@@ -2,22 +2,35 @@
   "name": "react-form-wrapper",
   "version": "0.0.6",
   "description": "Compose controlled forms in React.",
-  "main": "dist/index.js",
+  "main": "lib/index.js",
+  "jsnext:main": "es/index.js",
+  "files": [
+    "dist",
+    "lib",
+    "es",
+    "src"
+  ],
   "repository": {
     "type": "git",
     "url": "git://github.com/rhythnic/react-form-wrapper.git"
   },
   "scripts": {
+    "clean": "rimraf lib dist es examples/.build",
     "test": "babel-tape-runner test/**/*.js",
-    "compile": "babel -d dist/ src/",
-    "start": "webpack-dev-server --inline --content-base compiled-examples --history-api-fallback",
-    "build:examples": "webpack"
+    "build:commonjs": "cross-env NODE_ENV=production babel src --out-dir lib",
+    "build:es": "cross-env NODE_ENV=production babel src --out-dir es",
+    "build:umd": "cross-env NODE_ENV=development webpack src/index.js dist/react-form-wrapper.js",
+    "build:umd:min": "cross-env NODE_ENV=production webpack src/index.js dist/react-form-wrapper.min.js",
+    "build": "npm run build:commonjs && npm run build:es && npm run build:umd && npm run build:umd:min",
+    "prepublish": "npm run clean && npm test && npm run build",
+    "build:examples": "webpack --config webpack.examples.js",
+    "serve:examples": "webpack-dev-server --config webpack.examples.js --inline --history-api-fallback"
   },
   "keywords": [
-    "React",
-    "Forms",
-    "Serialize",
-    "Controlled forms"
+    "react",
+    "forms",
+    "serialize",
+    "controlled"
   ],
   "authors": [
     "Nick Baroni <nick@rhythnic.com> (https://github.com/rhythnic)"
@@ -26,34 +39,46 @@
     "url": "https://github.com/rhythnic/react-form-wrapper/issues"
   },
   "license": "MIT",
+  "npmName": "react-form-wrapper",
+  "npmFileMap": [
+    {
+      "basePath": "/dist/",
+      "files": [
+        "*.js"
+      ]
+    }
+  ],
   "dependencies": {
     "immutable": "^3.7.6",
-    "react-addons-pure-render-mixin": "^15.0.1"
+    "react-addons-pure-render-mixin": "^15.0.0",
+    "lodash": "^4.6.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.8.0",
     "babel-core": "^6.7.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-rewire": "^1.0.0-rc-2",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-tape-runner": "^2.0.1",
+    "cross-env": "^1.0.7",
     "enzyme": "^2.2.0",
     "faucet": "0.0.1",
     "jsdom": "^8.3.0",
     "jsdom-global": "^1.7.0",
-    "lodash": "^4.6.1",
     "react": "^15.0.1",
     "react-addons-test-utils": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-hot-loader": "^1.3.0",
     "react-redux": "^4.4.1",
     "redux": "^3.3.1",
+    "rimraf": "^2.5.2",
     "sinon": "^1.17.3",
     "tape": "^4.5.1",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   },
   "peerDependencies": {
-    "react": "^15.0.1"
+    "react": "^15.0.0"
   }
 }
