--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
   ],
   "dependencies": {
     "immutable": "^3.7.6",
-    "react-addons-pure-render-mixin": "^15.0.0",
     "lodash": "^4.6.1"
   },
   "devDependencies": {
@@ -78,6 +77,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "peerDependencies": {
-    "react": "^15.0.0"
+    "react": "^15.0.0",
+    "react-addons-pure-render-mixin": "^15.0.0"
   }
 }
