--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
   ],
   "dependencies": {
     "immutable": "^3.7.6",
-    "lodash": "^4.6.1"
+    "lodash": "^4.6.1",
+    "ramda": "^0.22.1"
   },
   "devDependencies": {
     "babel-cli": "^6.8.0",
